# kedro-student-dropout-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
src/student_dropout_prediction/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/student_dropout_prediction/pipelines/data_processing/: nodes.py  pipeline.py
src/student_dropout_prediction/pipelines/evaluation/: nodes.py  pipeline.py
src/student_dropout_prediction/pipelines/model_training/: nodes.py  pipeline.py
src/student_dropout_prediction/pipelines/prediction/: nodes.py  pipeline.py
tests/pipelines/data_processing/: test_nodes.py
tests/pipelines/model_training/: test_nodes.py
tests/pipelines/prediction/: test_nodes.py
