[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "student_dropout_prediction"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.14",]

[project.scripts]
student-dropout-prediction = "student_dropout_prediction.__main__:main"

[tool.kedro]
package_name = "student_dropout_prediction"
project_name = "student-dropout-prediction"
kedro_init_version = "0.19.14"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "student_dropout_prediction.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "b9a11e6d9d244a56b46c60c42e888313"
